tests/unit/default/syntax-error/030-create-table-parens-name-colon-type-parens-num-comma-num.x.t
---- IN ----
+%table(id:decimal(10,2|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...able(id:decimal(10,2` near `|` at position 23 - at line 1
---- EXIT ----
1
